; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-thin.c_process_discard_cell_passdown.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-thin.c_process_discard_cell_passdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thin_c = type { i32 }
%struct.dm_bio_prison_cell = type { %struct.TYPE_2__, %struct.bio* }
%struct.TYPE_2__ = type { i32, i32 }
%struct.bio = type { i32 }
%struct.dm_thin_endio_hook = type { %struct.dm_bio_prison_cell* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.thin_c*, %struct.dm_bio_prison_cell*)* @process_discard_cell_passdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @process_discard_cell_passdown(%struct.thin_c* %0, %struct.dm_bio_prison_cell* %1) #0 {
  %3 = alloca %struct.thin_c*, align 8
  %4 = alloca %struct.dm_bio_prison_cell*, align 8
  %5 = alloca %struct.bio*, align 8
  %6 = alloca %struct.dm_thin_endio_hook*, align 8
  store %struct.thin_c* %0, %struct.thin_c** %3, align 8
  store %struct.dm_bio_prison_cell* %1, %struct.dm_bio_prison_cell** %4, align 8
  %7 = load %struct.dm_bio_prison_cell*, %struct.dm_bio_prison_cell** %4, align 8
  %8 = getelementptr inbounds %struct.dm_bio_prison_cell, %struct.dm_bio_prison_cell* %7, i32 0, i32 1
  %9 = load %struct.bio*, %struct.bio** %8, align 8
  store %struct.bio* %9, %struct.bio** %5, align 8
  %10 = load %struct.bio*, %struct.bio** %5, align 8
  %11 = call %struct.dm_thin_endio_hook* @dm_per_bio_data(%struct.bio* %10, i32 8)
  store %struct.dm_thin_endio_hook* %11, %struct.dm_thin_endio_hook** %6, align 8
  %12 = load %struct.dm_bio_prison_cell*, %struct.dm_bio_prison_cell** %4, align 8
  %13 = load %struct.dm_thin_endio_hook*, %struct.dm_thin_endio_hook** %6, align 8
  %14 = getelementptr inbounds %struct.dm_thin_endio_hook, %struct.dm_thin_endio_hook* %13, i32 0, i32 0
  store %struct.dm_bio_prison_cell* %12, %struct.dm_bio_prison_cell** %14, align 8
  %15 = load %struct.thin_c*, %struct.thin_c** %3, align 8
  %16 = load %struct.dm_bio_prison_cell*, %struct.dm_bio_prison_cell** %4, align 8
  %17 = getelementptr inbounds %struct.dm_bio_prison_cell, %struct.dm_bio_prison_cell* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.dm_bio_prison_cell*, %struct.dm_bio_prison_cell** %4, align 8
  %21 = getelementptr inbounds %struct.dm_bio_prison_cell, %struct.dm_bio_prison_cell* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = load %struct.bio*, %struct.bio** %5, align 8
  %25 = call i32 @break_up_discard_bio(%struct.thin_c* %15, i32 %19, i32 %23, %struct.bio* %24)
  %26 = load %struct.bio*, %struct.bio** %5, align 8
  %27 = call i32 @bio_endio(%struct.bio* %26)
  ret void
}

declare dso_local %struct.dm_thin_endio_hook* @dm_per_bio_data(%struct.bio*, i32) #1

declare dso_local i32 @break_up_discard_bio(%struct.thin_c*, i32, i32, %struct.bio*) #1

declare dso_local i32 @bio_endio(%struct.bio*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
